fixing color picker empty conatainer spacing

--- a/client/react/components/ColorPicker.css
+++ b/client/react/components/ColorPicker.css
@@ -125,6 +125,9 @@
 }
 
 .img-container-empty {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border: dashed 1px grey;
   min-width: 520px;
   max-width: 800px;
